@@ -90,6 +90,7 @@ $v3 = 0;
 		  believe => '1,Believable nodes,parray',
 		  lastping => '1,Last Ping at,ptimelist',
 		  maxconnect => '1,Max Connections',
+		  width => '0,Preferred Width',
 		 );
 
 #no strict;
